Fix CSS on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -131,7 +131,7 @@ body {
 }
 
 .fav-title {
-    height: 40px;
+    height: 35px;
     width: 100%;
     background-color: $normal6;
     display: flex;
@@ -141,7 +141,7 @@ body {
     top: -2px;
     color: white;
     font-family: 'Roboto', sans-serif;
-    font-size: 19px;
+    font-size: 15px;
 }
 
 .wrapper {
@@ -153,98 +153,129 @@ body {
     align-items: center;
     position: relative;
     flex-wrap: wrap;
-    card-directive, favcard-directive {
+    card-directive {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
         flex-direction: column;
     }
     favcard-directive {
-        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        flex-direction: column;
     }
 }
 
 
-.card {
-    width: 290px;
-    height: 290px;
-    margin: 20px 0;
-    border-radius: 4px;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
-    .card-image {
-        width: 100%;
-        height: 60%;
-        background-color: #26A69A;
-        display: flex;
-        align-items: flex-end;
-        position: relative;
-        i {
-            font-size: 30px;
-            position: absolute;
-            top: 5px;
-            right: 5px;
+card-directive {
+    .card {
+        width: 290px;
+        height: 290px;
+        margin: 20px 0;
+        border-radius: 4px;
+        box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+        .card-image {
+            width: 100%;
+            height: 60%;
+            background-color: #26A69A;
+            display: flex;
+            align-items: flex-end;
+            position: relative;
+            i {
+                font-size: 30px;
+                position: absolute;
+                top: 5px;
+                right: 5px;
+            }
+            h2 {
+                margin: 0px 0px 15px 20px;
+                font-size: 24px;
+                font-family: 'Roboto', sans-serif;
+                font-weight: 300;
+                color: white;
+            }
         }
-        h2 {
-            margin: 0px 0px 15px 20px;
-            font-size: 24px;
-            font-family: 'Roboto', sans-serif;
-            font-weight: 300;
-            color: white;
+        .card-description {
+            width: 100%;
+            height: 20%;
+            display: flex;
+            align-items: center;
+            border-bottom: 1px solid #E0E0E0;
+            padding: 0 10px;
+            h3 {
+                margin: 0px 20px;
+                font-family: 'Roboto', sans-serif;
+                font-size: 16px;
+                color: #BDBDBD;
+            }
         }
-    }
-    .card-description {
-        width: 100%;
-        height: 20%;
-        display: flex;
-        align-items: center;
-        border-bottom: 1px solid #E0E0E0;
-        h3 {
-            margin: 0px 0px 0px 20px;
-            font-family: 'Roboto', sans-serif;
-            font-size: 16px;
-            color: #BDBDBD;
-        }
-    }
-    .card-controls {
-        width: 100%;
-        a, label {
-            transform: translateY(10px);
-            margin: 0 20px;
-        }
-        #left {
-            float: left;
-            font-family: 'Roboto', sans-serif;
-            font-size: 20px;
-            color: #BDBDBD;
-            transform: translateY(18px);
-        }
-        #right {
-            float: right;
+        .card-controls {
+            width: 100%;
+            a, label {
+                transform: translateY(10px);
+            }
+            #left {
+                float: left;
+                font-family: 'Roboto', sans-serif;
+                font-size: 12px;
+                color: #BDBDBD;
+                transform: translateY(20px);
+                padding-left: 10px;
+            }
+            #right {
+                float: right;
+                margin-right: 5px;
+            }
         }
     }
 }
 
 favcard-directive {
+    width: 100%;
     .card {
-        width: 100%;
         height: 100px;
+        width: 100%;
         display: flex;
+        margin: 15px 0;
+        border-radius: 4px;
+        box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
         .card-image {
-            width: 50%;
+            width: 40%;
             border-radius: 2px;
             height: 100%;
+            background-color: #26A69A;
+            position: relative;
+            i {
+                font-size: 20px;
+                position: absolute;
+                top: 5px;
+                right: 5px;
+            }
             h2 {
-                font-size: 16px;
+                position: absolute;
+                bottom: 3px;
+                left: 0px;
+                font-size: 14px;
+                margin: 0px 0px 10px 10px;
+                font-family: 'Roboto', sans-serif;
+                font-weight: 300;
+                color: white;
             }
         }
         .card-description {
-            height: 100%;
+            width: 60%;
+            padding: 0 10px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             h3 {
-                font-size: 14px;
+                font-size: 12px;
+                margin: 0px 20px;
+                font-family: 'Roboto', sans-serif;
+                color: #BDBDBD;
             }
-        }
-        .card-controls {
-            display: none;
         }
     }
 }
